# Logos

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ios-release.yml  ios.yml
brand/: README.md
crates/logos-cli/: Cargo.toml
crates/logos-cli/src/: main.rs
crates/logos-client/: Cargo.toml
crates/logos-client/src/: encrypted_store.rs  lib.rs
crates/logos-client/tests/: audit_poc.rs  group_chat.rs  relay_roundtrip.rs
crates/logos-ffi/: Cargo.toml
crates/logos-ffi/src/: lib.rs
crates/logos-ffi/tests/: ffi_smoke.rs
crates/logos-identity/: Cargo.toml
crates/logos-identity/src/: kem.rs  lib.rs
crates/logos-pqxdh/: Cargo.toml
crates/logos-pqxdh/src/: lib.rs
crates/logos-proto/: Cargo.toml
crates/logos-proto/src/: lib.rs
crates/logos-ratchet/: Cargo.toml
crates/logos-ratchet/src/: lib.rs  senderkey.rs
crates/logos-sealed/: Cargo.toml
crates/logos-sealed/src/: lib.rs
crates/logos-server/: Cargo.toml
crates/logos-server/src/: lib.rs  main.rs
crates/logos-server/tests/: key_persistence_poc.rs
crates/logos-wasm/: Cargo.toml
crates/logos-wasm/src/: lib.rs
docs/: AI_NATIVE_BLUEPRINT.md  BLUEPRINT_PROGRESS.md  CI_TESTFLIGHT_SETUP.md  DEEPSEEK_REVIEW.md  DESIGN.md  GROUP_CHAT_PLAN.md  MULTI_ACCOUNT_PLAN.md  NEXT_LEVEL.md  PRIVATE-RELAY.md  PROTOCOL.md  REDTEAM-2026-06.md  ROADMAP.md  SIGNAL_PLUS_BLUEPRINT.md  THREAT-MODEL.md  VERIFIABLE_INTRODUCTIONS.md  VOICE_CALLS_ROADMAP.md
ios/: README.md
ios/LogosApp/: project.yml
ios/LogosApp/Assets.xcassets/Emblem.imageset/: Contents.json
ios/LogosApp/Assets.xcassets/Wordmark.imageset/: Contents.json
ios/LogosApp/Assets.xcassets/WordmarkGreek.imageset/: Contents.json
ios/LogosApp/Sources/: AICatchUpSheet.swift  AIChatView.swift  AIClient.swift  AISettingsView.swift  AppleOnDevice.swift  ChatView.swift  ContactsView.swift  ConversationsView.swift  DesignSystem.swift  GroupChatView.swift  LogosApp.swift  LooseEndsView.swift  Markdown.swift  ModelKeys.swift  OnboardingView.swift  QRSupport.swift  RelayVisibilityView.swift  SealedSenderView.swift  Session.swift  SettingsView.swift  StoreKey.swift  VerifyView.swift
ios/LogosKit/: Package.swift
ios/LogosKit/Sources/LogosKit/: LogosKit.swift
scripts/: build-ios.sh
web/: README.md  build-wasm.sh  worker.js  wrangler.toml
web/public/: app.js  index.html  manifest.json  robots.txt  sitemap.xml  styles.css
