[package]
name = "logos-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zeroize.workspace = true
argon2.workspace = true
bip39.workspace = true
chacha20poly1305.workspace = true
logos-identity.workspace = true
logos-pqxdh.workspace = true
logos-ratchet.workspace = true
logos-sealed.workspace = true
logos-proto.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
logos-server.workspace = true
tokio.workspace = true
axum.workspace = true
