[package]
name = "logos-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
ml-kem.workspace = true
sha2.workspace = true
hkdf.workspace = true
zeroize.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
hex.workspace = true
thiserror.workspace = true
