[package]
name = "logos-ratchet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
zeroize.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
